# snhp

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  MANIFESTO.md  NOTICE  PRICING.md  README.md  fly.toml  glama.json  pyproject.toml  requirements.txt  server.json  smithery.yaml
SNHP_Whitepaper/: PRD_Component_1_Engram_Test.md  PRD_Component_2_Nash_Solver.md  PRD_Component_3_Bayesian_Agent.md  synthetic_handshake_protocol.md
arena/: DEPLOY.md  Dockerfile  EVENTS.md  README.md  SCIENCE.md  __init__.py  api.py  auction.py  broadcaster.py  config.py  courtship.py  credit.py  events.py  executor.py  fastforward.py  flora.py  fly.toml  genome.py  names.py  runner.py  scenarios.py  science.py  species.py  store.py  world.py
bakeshop/: RESULTS.md  calibration.py  policies.py  results.json  run.py  services.json  services.py  world.py
block/: DESIGN.md  EXPERIMENTS.md  NETWORK.md  RESULTS-B0.md  RESULTS-B1B2.md  RESULTS-B5.md  RESULTS-B6.md  RESULTS-B7.md  __init__.py  agentdemand.py  bundles.py  calibration.py  datamarket.py  firm.py  firm_experiment.py  flywheel.py  gen_week.py  ledger.py  live.py  network.py  population.py  results-adopt.json  results-b6-bundles.json  results-b6.json  results-b7.json  results-block10.json  results-datamarket.json  results-firm.json  results-flywheel.json  results.json  runner.py  venues.py
boba/: RESULTS.md  __init__.py  attack-battery-floored.json  attack-battery.json  attack.py  balk-respec.json  battery.json  battery.py  liar-sweep-floored.json  liar-sweep.json  menu-fairness.json  policies.py  results-suggest.json  results.json  run.py  suggest.py  world.py
buyer/: DESIGN.md  RESULTS.md  __init__.py  agent.py  frontier.py  ledger.py  merchant.py  preflearn.py  results-preflearn.json  results.json  run.py  stats.py  strategies.py  values.py  wallet.py  world.py
companysim/: SPEC.md  __init__.py  agent.py  allocation.py  chain.py  config.py  conftest.py  events.py  fraud.py  ledger.py  llm.py  meter.py  pricing.py  protocol.py  run_chain.py  run_episodes.py  run_fraud.py  runner.py  tasks_co2a.py  tasks_co2s.py  test_chain.py  test_companysim.py  test_extensions.py  test_fraud.py  timeutil.py  workspace.py
core/: __init__.py  api.py  cost.py  demand.py  deps.py  engine.py  notary.py  offer_graph.py  profiler.py  state.py
discovery/: GO_LIVE.md  a2a_registry_entry.json  mcp_skill_manifest.json
divorce/: RESULTS.md  SPEC.md  __init__.py  api.py  arms.py  elicit.py  kill_harness.py  personas.py  receipt.py  results-kill-confirmatory-seed23.json  results-kill-holdout-seed11.json  results-kill-step1.json  results-kill-step2.json  results-kill-v2-seed11.json  results-kill-v2-seed23.json  results-kill-v2-seed7.json  results-pilot.json  results-science-seed11.json  results-science-seed23.json  results-science-seed31.json  results-science-seed7.json  results-science.json  results-seed11.json  results-seed23.json  results-seed31.json  results-seed7.json  results-trap-check.json  science_eval.py  trace.py  trap_check.py
docs/: REDESIGN.md  launch.md
fashion/: RESULTS.md  __init__.py  core.py  policies.py  results-v4.json  results.json  run.py  world.py
gametheory/: CHANGELOG.md  _db.py  _internal.py
leaderboard/: SHOW_HN_DRAFT.md  ablation.py  protocol.py  run.py  smoke_agents.py  tournament.py  usage.py
meridian/: README.md  SPEC.md  __init__.py  agents.py  audit.py  ledger.py  market.py  protocol.py  report.md  report.py  test_meridian.py
nx/: PREREG.md  README.md  SPEC.md  __init__.py  bridge.py  experiment.py  protocol.py  test_nx.py
paper/: CALIBRATION-TARGETS.md  CRITICAL-ANALYSIS.md  NEIGHBORHOOD-CALIBRATION.md  THEOREM-IC-MULTI.md  THEOREM-IC.md  WHITEPAPER.md  theorem_ic_multi_harness.py
paperswarm/: SPEC.md  __init__.py  comps.py  config.py  feed.py  fills.py  identity.py  ledger.py  outcomes.py  run_desk.py  swarm.py  test_paperswarm.py  timeutil.py
par/: DEPLOY.md  Dockerfile  README.md  SPEC.md  _store.py  api.py  fly.toml  funnel.py  schema.sql  scoreboard.py
research/: README.md  demo-experiments-plan.md  diomande_results.json  diomande_sim.py  divorce-effectiveness-survey.md  fifatickets_results.json  fifatickets_sim.py  idea-triage-2026-07-17.md  lira_results.json  lira_sim.py  mora_results.json  mora_sim.py  tonali_results.json  tonali_sim.py  wcpremium_results.json  wcpremium_sim.py
slots/: RESULTS.md  __init__.py  calibration.py  policies.py  results.json  run.py  world.py
snhp/: __init__.py  _stats.py  agent_cli.py  anthropic_calibrate.py  b2b_opponents.py  b2b_round_robin.py  bayesian_agent.py  benchmark.py  boa_diagnostic.py  cfpb_disputes.json  cost_calculator.py  craigslist_train.json  cs_negotiation_dataset.py  dispute_economics.py  engram.py  eval_harness.py  eval_metrics.py  expert_simulations.py  extraction_benchmark_gemini_gemini-2.0-flash.json  extraction_benchmark_gemini_gemini-3-flash-preview.json  extraction_benchmark_gpt-4o-mini.json  fetch_cfpb_disputes.py  fetch_craigslist.py  formatters.py  game_theory.py  greenpoint_test.py  history_store.py  llm_extractor.py  llm_minimal_snhp.py  llm_negotiator.py  market_data.json  market_intel.py  mcp_server.py  meta_exploiters.py  micro_agent.py  models.py  nash_solver.py  negmas_agent.py  optimal_params.json  optimal_params_buyer.json  (+18 more)
snhp/core_math/: bayesian.py  rubinstein.py
snhp/docs/: prd_01_orchestration_sdk.md  prd_02_trust_simulator.md  prd_03_enterprise_dashboard.md  prd_04_mathematical_core.md
snhp/market/: priors.py
snhp/scripts/: sanity_check.py  vending_machine_benchmark.py
snhp/server/: api.py
snhp/tests/: __init__.py  test_e2e_pipeline.py  test_engine.py  test_game_theory.py  test_mcp_output.py
snhp/tests/math/: test_latency.py  test_nash.py
snhp/tests/sdk/: test_mcp_validation.py
snhp/web/: app.js  index.html  style.css
specaudit/: SPEC.md  __init__.py  gap_sim.py  quote-audit.md  report.md  sources.md  test_specaudit.py
vend/: ACCEPTING_PAYMENTS.md  AGENTIC_PAYMENTS.md  BOBA.md  DESIGN.md  FASHION.md  GAUNTLET.md  RESULTS.md  __init__.py  advice.py  api.py  battery.json  battery.py  core.py  demand.py  (+23 more)
(+652 files in other folders)
