[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gametheory"
version = "0.1.0"
description = "Game-theory layer for AI agents — equilibrium-aware primitives"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "gametheory.dev"}]
keywords = ["negotiation", "auctions", "mechanism-design", "agents", "mcp"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "cryptography>=42",
    "PyJWT>=2.8",
    "mcp>=1.27",
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]
snhp = [
    "negmas",
    "litellm",
    "google-genai>=1.0.0",
    "optuna>=3.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
# Runtime deps for the hosted FastAPI server. Includes the LLM stack
# (litellm + google-genai) for the paid `draft_message` endpoint, numba
# for the JIT-compiled SNHP math, dotenv for env config, and psycopg2
# for Postgres when DATABASE_URL is set. Excludes negmas / optuna /
# pandas / scikit-learn — those are tuning-time only.
prod = [
    "litellm",
    "google-genai>=1.0.0",
    "psycopg2-binary>=2.9",
    "numba>=0.59",
    "python-dotenv>=1.0",
    "stripe>=8.0",
]

[project.scripts]
# `pip install -e .` then `gametheory-mcp` runs the stdio MCP server.
gametheory-mcp = "gametheory.server.mcp_server:main"
gametheory-http = "gametheory.server._http_entry:main"

[project.urls]
homepage = "https://gametheory.dev"
docs = "https://docs.gametheory.dev/llms.txt"

[tool.setuptools.packages.find]
include = ["gametheory*"]
exclude = ["snhp*", "tests*", "venv*"]
