[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snhp"
version = "0.1.0"
description = "Math-optimal negotiation moves for AI agents, in plain dollars (single + multi-issue)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "gametheory.dev"}]
keywords = ["negotiation", "auctions", "mechanism-design", "agents", "mcp"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "cryptography>=42",
    "PyJWT>=2.8",
    "mcp>=1.27",
    "numba>=0.59",
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]
snhp = [
    "negmas",
    "litellm",
    "google-genai>=1.0.0",
    "optuna>=3.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
# Runtime deps for the hosted FastAPI server. numba for the JIT-compiled
# SNHP math, dotenv for env config, psycopg2 for Postgres when
# DATABASE_URL is set. anthropic powers the dispute co-pilot's server-side
# LLM calls (extract + draft) — a deliberate departure from the original
# BYOK pattern, bounded by the $5/day kill switch (gametheory.server._llm_budget).
# Excludes negmas / optuna / pandas / scikit-learn — tuning-time only.
# Excludes stripe — billing routes deferred (re-add `stripe>=8.0` when
# re-wiring paid endpoints).
prod = [
    "psycopg2-binary>=2.9",
    "numba>=0.59",
    "python-dotenv>=1.0",
    "anthropic>=0.97",
]

[project.scripts]
# `uvx snhp` (or `gametheory-mcp`) runs the stdio MCP server.
snhp = "gametheory.server.mcp_server:main"
gametheory-mcp = "gametheory.server.mcp_server:main"
gametheory-http = "gametheory.server._http_entry:main"

[project.urls]
homepage = "https://gametheory.dev"
docs = "https://docs.gametheory.dev/llms.txt"

[tool.setuptools.packages.find]
include = ["gametheory*", "snhp*"]
exclude = ["snhp.tests*", "tests*", "venv*", "leaderboard*"]
