[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snhp"
version = "3.1.0"
description = "Synthetic Negotiation Handshake Protocol (SNHP). Game-theory orchestration engine for AI Agents."
readme = "README.md"
authors = [
  { name="SNHP Labs", email="engineering@snhp.dev" }
]
license = { text="MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.0.0",
    "litellm>=1.83.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "numba>=0.58.0"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["snhp"]
package-dir = {"snhp" = "."}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://snhp.dev"
"Bug Tracker" = "https://github.com/snhp/snhp/issues"
